Use URI for websocket connection (wss protocol)